--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
 </head>
 <body>
 <header>
-    <img src="/logo.gif" alt="LOGO"/>
-    PHDM
+    <div>
+        <img src="/logo.gif" alt="LOGO"/>
+        <h1>PHDM</h1>
+    </div>
 </header>
 <nav>
         <div class="navElement visited">
             <a href="#">Inicio</a>
         </div>
-        <div class="navElement visited">
+        <div class="navElement ">
             <a href="#">Contenidos</a>
         </div>
-        <div class="navElement visited">
+        <div class="navElement ">
             <a href="#">Profesorado</a>
         </div>
 <nav>
